<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/sector_green_mile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="260dp"
                android:layout_gravity="center"
                android:src="@drawable/green_mile" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/title_green_mile"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/green_mile_details"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_green_mile_details"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_movie_detail"
                    android:textAllCaps="false" />

                <ImageButton
                    android:id="@+id/share_button_green_mile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_share_24"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sector_shawshenk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sector_green_mile"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="260dp"
                android:layout_gravity="center"
                android:src="@drawable/shawsenk"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_shawshank"
                android:gravity="center"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shawshank_details"
                android:gravity="center"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_shawshenk_details"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_movie_detail"
                    android:textAllCaps="false" />

                <ImageButton
                    android:id="@+id/share_button_shawshenk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_share_24"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sector_lord_of_the_rings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sector_shawshenk"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="260dp"
                android:layout_gravity="center"
                android:src="@drawable/lord_of_the_rings"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_lord_of_the_rings"
                android:gravity="center"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lord_of_the_rings_details"
                android:gravity="center"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_lord_of_the_rings_details"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_movie_detail"
                    android:textAllCaps="false" />

                <ImageButton
                    android:id="@+id/share_button_lord_of_the_rings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_share_24"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sector_forest_gump"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sector_lord_of_the_rings"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="260dp"
                android:layout_gravity="center"
                android:src="@drawable/forest_gump"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_forrest_gump"
                android:gravity="center"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forrest_gump_details"
                android:gravity="center"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_forrest_gump_details"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_movie_detail"
                    android:textAllCaps="false" />

                <ImageButton
                    android:id="@+id/share_button_forrest_gump"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_share_24"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sector_lion_king"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sector_forest_gump"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="260dp"
                android:layout_gravity="center"
                android:src="@drawable/lion_king"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_lion_king"
                android:gravity="center"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lion_king_details"
                android:gravity="center"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_lion_king_details"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_movie_detail"
                    android:textAllCaps="false" />

                <ImageButton
                    android:id="@+id/share_button_lion_king"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_share_24"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>