<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".DetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_detail_poster"
            android:layout_width="200dp"
            android:layout_height="300dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@drawable/lion_king"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/movie_detail_title"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movie_detail_poster"
            app:layout_constraintTop_toTopOf="@id/movie_detail_poster"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="center"
            tools:text="The Lion King (1994)" />

        <TextView
            android:id="@+id/movie_detail_description"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/movie_detail_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movie_detail_poster"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_title"
            android:textColor="@color/black"
            tools:text="Львенок Симба бросает вызов дяде-убийце. Величественный саундтрек, рисованная анимация и шекспировский размах" />

        <TextView
            android:id="@+id/about_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_poster"
            android:text="@string/details_about_movie"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:textSize="25sp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_movie_title">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/details_year" />

            <TextView
                android:id="@+id/movie_detail_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:text="1994" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/details_country" />

            <TextView
                android:id="@+id/movie_detail_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:text="США" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/details_genre" />

            <TextView
                android:id="@+id/movie_detail_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:text="мультфильм, мюзикл, драма, приключения, семейный" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/details_tagline" />

            <TextView
                android:id="@+id/movie_detail_tagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:text="«The Circle of Life»" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/details_director" />

            <TextView
                android:id="@+id/movie_detail_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:text="Роджер Аллерс, Роб Минкофф" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/details_scenario" />

            <TextView
                android:id="@+id/movie_detail_scenario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:text="Ирен Меччи, Джонатан Робертс, Линда Вулвертон" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/details_producer" />

            <TextView
                android:id="@+id/movie_detail_producer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:text="Дон Хан, Элис Дьюи, Сара МакАртур" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/details_composer" />

            <TextView
                android:id="@+id/movie_detail_composer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:text="Дон Хан, Элис Дьюи, Сара МакАртур" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/details_installation" />

            <TextView
                android:id="@+id/movie_detail_installation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:text="Иван Биланкио" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/details_budget" />

            <TextView
                android:id="@+id/movie_detail_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:text="$45 000 000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="20dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/details_time" />

            <TextView
                android:id="@+id/movie_detail_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:text="88 мин. / 01:28" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:paddingBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/linearLayout11"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@string/details_discussion"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/movie_detail_discussion_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                app:counterEnabled="true"
                app:counterMaxLength="300"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:maxLength="300"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_send_button"
                android:layout_gravity="end"
                android:textAllCaps="false"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>